maze.island.IslandMaze.scala.error
Compilation error:
IslandMaze:6: error: not found: value suivreEst
    case 1 => suivreEst(); etat = 0;
              ^