maze.island.IslandMaze.scala.code
override def run() {
  var etat = 0;
  etat match {
    case 0 => courirNord(); etat = 1;
    case 1 => suivreEst(); etat = 0;
  }
}


def courirNord() {
  while(!estFaceMur) {
    forward();
  }
}


def keepHandOnSideWall() {
  left();
  while (estFaceMur()) {
    right();
  }
  forward();
}